--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.3",
     "@kolkov/angular-editor": "^3.0.0-beta.2",
+    "@ngrx/effects": "^19.2.1",
+    "@ngrx/store": "^19.2.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
