--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:interview": "node dist/interview/server/server.mjs"
+    "serve:ssr:interview": "node dist/interview/server/server.mjs",
+    "predeploy": "ng build --configuration production --base-href=/interview/",
+    "deploy": "angular-cli-ghpages --dir=dist/interview/browser"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +40,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "angular-cli-ghpages": "^2.0.3",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
     "jasmine-core": "~5.6.0",
