--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
+    "@angular/pwa": "^19.2.15",
     "@angular/router": "^19.2.0",
+    "@angular/service-worker": "^19.2.0",
     "@angular/ssr": "^19.2.3",
     "@kolkov/angular-editor": "^3.0.0-beta.2",
     "@ngrx/effects": "^19.2.1",
